add start script

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,8 +14,8 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="float-md-left mb-0">Museum Councel</h3>
-                <nav class="nav nav-masthead justify-content-center float-md-right"> 
+                <h3 class="float-md-left mb-0">Museum Counsel</h3>
+                <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" id="home" href="#">Home</a>
                     <a class="nav-link" href="/museums">Museums</a>
                     <% if(!currentUser){ %>
@@ -28,14 +28,14 @@
             </div>
         </header>
         <main>
-            <h1>Museum Councel</h1>
-            <p class="lead">Welcome to Museum Councel! <br> Information about all Museums in one place.
+            <h1>Museum Counsel</h1>
+            <p class="lead">Welcome to Museum Counsel! <br> Information about all Museums in one place.
                 <br>
                 Feel free to share your exeriences in the reviews. :) </p>
             <a href="/museums" class="btn btn-secondary font-weight-bold">View Museums</a>
         </main>
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2020 Museum Councel</p>
+            <p>&copy; 2020 Museum Counsel</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"
