--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -5,7 +5,7 @@
         <div class="card shadow mb-4">
             <div class="card-body">
                 <h5 class="card-title mb-4">Register</h5>
-                <form action="/register" class="needs-validation" novalidate method="POST">
+                <form action="/register" class="needs-validation" method="POST" novalidate>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
                         <input type="email" id="email" name="email" class="form-control" required autofocus>
