--- a/views/museums/index.ejs
+++ b/views/museums/index.ejs
@@ -8,6 +8,9 @@
         integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/stylesheets/index.css">
+    <link rel="icon"
+        href="https://res.cloudinary.com/dpnapmmwm/image/upload/v1609475126/Museum%20Councel/letter-m-icon-png-21861-Windows_bqlljq.ico">
+    
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <title>Museum Counsel</title>
