--- a/views/museums/new.ejs
+++ b/views/museums/new.ejs
@@ -38,9 +38,9 @@
                         </div>
                     </div>
 
-                    <div class="mb-4">
+                    <div class="mb-3">
                         <label for="image" class="form-label">Image(s)</label>
-                        <input type="file" id="image" name="image" class="form-control" required multiple>
+                        <input type="file" id="image" name="image" class="form-control" multiple>
                         <div class="valid-feedback">
                             Looks Good!
                         </div>
