--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -25,15 +25,10 @@
                 </form>
             </div>
         </div>
-        <div> <a class="btn btn-md btn-google btn-block text-uppercase btn-outline " href="/auth/google"><img
+        <div> <a class="btn btn-md btn-google btn-block btn-outline " href="/auth/google"><img
                     src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using
-                Google</a> </div>
-        <br>
-        <div>
-            <a class="btn btn-md btn-social btn-facebook" href="/auth/facebook">
-                Sign in with Facebook
-            </a>
-        </div>
+                Google</a></div>
+
         <br>
         <p class="text-center">Don't have an account? <a href="/register">Sign up</a></p>
     </div>
