--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark py-1 mt-auto">
+<footer class="footer py-1 mt-auto" style="background-color: #0f1123;">
     <div class="container text-center">
         <span class="text-muted">&copy Museum Counsel 2020</span>
     </div>
