--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,6 +1,5 @@
 body{
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('https://images.unsplash.com/photo-1541264161754-445bbdd7de52?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
     background-size: cover;
     background-position: center;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
@@ -35,17 +34,20 @@ body{
 
 @media(max-width:700px){
     body{
-        font-size: 12px;
+        font-size: 14px;
+    }
+    .cover-container{
+        max-width: 90vw;
     }
     h3{
-        font-size: 15px;
+        font-size: 17px;
         padding-bottom: 10px;
     }
     h1{
         font-size: 24px;
     }
     .lead{
-        font-size: 13px;
+        font-size: 16px;
     }
     .btn-secondary{
         font-size: 13px;
