--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,22 +1,59 @@
+body{
+    background-color: #eff7e1;
+    /* background-color: #f8f1f1; */
+    /* background-color: #c6ebc950; */
+}
 #map{
     width: 100%;
     height:450px;
     border-bottom: 1px solid #dcdacb;
     margin-top:0 ;
 }
+.card-title{
+    color: #0f1123;
+    font-size: 25px;
+}
+.card-text{
+    font-size: 16px;
+}
+.card{
+    border-radius: 10px;
+}
+.img-fluid{
+    border-radius: 10px 0 0 10px;
+}
 #all{
     padding-top: 16px;
     border-top: 1px solid #dcdacb
 }
-@media (max-width:700px){
+@media (max-width:800px){
     #map{
         width: 100%;
         height: 200px;
         margin-top: 10px;
         margin-bottom: 10px;
     }
+    .card-text{
+        font-size: 13px;
+    }
     body{
         font-size: 12px;
+    }
+    .img-fluid{
+        border-radius: 10px 10px 0 0;
+    }
+    #all{
+        text-align: center;
+    }
+    .btnSpl{
+        width: 80%;
+        font-size: 16px;
+    }
+    .card-title{
+        font-size: 21px;
+    }
+    .card{
+        border-radius:10px 10px 0 0;
     }
 }
 @media( min-width:1000px){
