--- a/views/museums/index.ejs
+++ b/views/museums/index.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/index.css">
     <link rel="icon"
         href="https://res.cloudinary.com/dpnapmmwm/image/upload/v1609475126/Museum%20Councel/letter-m-icon-png-21861-Windows_bqlljq.ico">
-    
+
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <title>Museum Counsel</title>
@@ -18,54 +18,60 @@
 
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar.ejs') %>
-    <main class="container-fluid px-0">
-        <%- include('../partials/flash.ejs') %>
-        <div id="map"></div>
-        <br class="d-sm-none">
-        <br>
-        <div class="container" id="all">
-            <h1 class="text-center mb-md-4 mb-sm-2">Museums</h1>
-            <% for(museum of museums){ %>
-            <div class="card mb-3">
-                <div class="row">
-                    <div class="col-md-5">
-                        <% if(museum.images.length){ %>
-                        <img class="img-fluid" src="<%=museum.images[0].url%>" alt="">
-                        <% }else{ %>
-                        <img class="img-fluid"
-                            src="https:s//res.cloudinary.com/dpnapmmwm/image/upload/v1607337366/Museum%20Councel/jfif7zyqy1zf5ceichgd.jpg"
-                            alt="">
-                        <% } %>
-                    </div>
-                    <div class="col-md-7">
-                        <div class="card-body">
-                            <h5 class="card-title"><%= museum.title %></h5>
-                            <p class="card-text"><%= museum.description %> </p>
-                            <p class="card-text">
-                                <small class="text-muted"><%= museum.location %> </small>
-                            </p>
-                            <a href="/museums/<%= museum.id %> " class="btn btn-md btn-primary">View <%= museum.title %>
-                            </a>
+        <main class="container-fluid px-0">
+            <%- include('../partials/flash.ejs') %>
+                <div id="map"></div>
+                <br class="d-sm-none">
+                <br>
+                <div class="container" id="all">
+                    <h1 class="text-center mb-md-4 mb-sm-2" style="color: #0f1123;">Museums</h1>
+                    <% for(museum of museums){ %>
+                        <div class="card mb-3">
+                            <div class="row">
+                                <div class="col-md-5">
+                                    <% if(museum.images.length){ %>
+                                        <img class="img-fluid" src="<%=museum.images[0].url%>" alt="">
+                                        <% }else{ %>
+                                            <img class="img-fluid"
+                                                src="https:s//res.cloudinary.com/dpnapmmwm/image/upload/v1607337366/Museum%20Councel/jfif7zyqy1zf5ceichgd.jpg"
+                                                alt="">
+                                            <% } %>
+                                </div>
+                                <div class="col-md-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title mt-md-2 mt-sm-1">
+                                            <%= museum.title %>
+                                        </h5>
+                                        <p class="card-text pt-md-3">
+                                            <%= museum.description %>
+                                        </p>
+                                        <p class="card-text">
+                                            <small class="text-muted">
+                                                <%= museum.location %>
+                                            </small>
+                                        </p>
+                                        <a href="/museums/<%= museum.id %> " class="btn btn-md btn-primary mt-md-3 btnSpl">View
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                        <% } %>
                 </div>
-            </div>
-            <% } %>
-        </div>
 
-    </main>
-    <%- include('../partials/footer.ejs') %>
+        </main>
+        <%- include('../partials/footer.ejs') %>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy"
-        crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy"
+                crossorigin="anonymous"></script>
 
-    <script src="/javascripts/validateForms.js"></script>
-    <script>
-        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-        const museums = { features: <%- JSON.stringify(museums) %> }
-    </script>
-    <script src="/javascripts/clusterMap.js"></script>
+            <script src="/javascripts/validateForms.js"></script>
+            <script>
+                const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+                const museums = { features: <%- JSON.stringify(museums) %> }
+            </script>
+            <script src="/javascripts/clusterMap.js"></script>
 
 
 </body>
