--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #0f1123;">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Museum Counsel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -13,11 +13,11 @@
             </div>
             <div class="navbar-nav ml-auto">
                 <% if(!currentUser){ %>
-                <a class="nav-link" aria-current="page" href="/login">Login</a>
-                <a class="nav-link" href="/register">Register</a>
-                <% } else{ %>
-                <a class="nav-link" href="/logout">Logout</a>
-                <% } %>
+                    <a class="nav-link" aria-current="page" href="/login">Login</a>
+                    <a class="nav-link" href="/register">Register</a>
+                    <% } else{ %>
+                        <a class="nav-link" href="/logout">Logout</a>
+                        <% } %>
             </div>
         </div>
     </div>
