--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #eff7e1;
+    background-color: #eff7e1ef;
     /* background-color: #f8f1f1; */
     /* background-color: #c6ebc950; */
 }
