--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -4,6 +4,7 @@ body{
     background-position: center;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.4);
+    font-family: 'Roboto',sans-serif;
 }
 .cover-container{
     max-width: 70vw;
