--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,7 @@
 body{
     background-color: #eff7e1ef;
     /* background-color: #f8f1f1; */
+    font-family: 'Roboto',sans-serif;
     /* background-color: #c6ebc950; */
 }
 #map{
@@ -12,6 +13,7 @@ body{
 .card-title{
     color: #0f1123;
     font-size: 25px;
+    font-weight: 500;
 }
 .card-text{
     font-size: 16px;
@@ -21,6 +23,7 @@ body{
 }
 .img-fluid{
     border-radius: 10px 0 0 10px;
+    height: 300px;
 }
 #all{
     padding-top: 16px;
@@ -41,6 +44,8 @@ body{
     }
     .img-fluid{
         border-radius: 10px 10px 0 0;
+        height: 200px;
+        width: 100%;
     }
     #all{
         text-align: center;
