--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,49 +1,53 @@
 <%- layout('layouts/boilerplate.ejs') %>
-<link rel="stylesheet" href="stylesheets/register.css">
+    <link rel="stylesheet" href="stylesheets/register.css">
 
-<div class="container d-flex justify-content-center align-items-center mt-5 row">
-    <div class="col-md-7 col-xl-4">
-        <div class="card shadow mb-4">
-            <div class="card-body">
-                <h5 class="card-title mb-4">Register</h5>
-                <form action="/register" class="needs-validation" method="POST" novalidate
-                    enctype="multipart/form-data">
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" id="email" name="email" class="form-control" required autofocus>
-                        <div class="valid-feedback">
-                            Looks Good!
+    <div class="container d-flex justify-content-center align-items-center mt-5 row">
+        <div class="col-md-7 col-xl-4">
+            <div class="card shadow mb-4">
+                <div class="card-body">
+                    <h5 class="card-title mb-4">Register</h5>
+                    <form action="/register" class="needs-validation" method="POST" novalidate
+                        enctype="multipart/form-data">
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" id="email" name="email" class="form-control" required autofocus>
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" id="username" name="username" class="form-control" required>
-                        <div class="valid-feedback">
-                            Looks Good!
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username</label>
+                            <input type="text" id="username" name="username" class="form-control" required>
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" id="password" name="password" class="form-control" required>
-                        <div class="valid-feedback">
-                            Looks Good!
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" id="password" name="password" class="form-control" required
+                                minlength="6">
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Minimum 6 characters.
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="image" class="form-label">Profile Picture</label>
-                        <input type="file" id="image" name="image" class="form-control">
-                        <div class="valid-feedback">
-                            Looks Good!
+                        <div class="mb-3">
+                            <label for="image" class="form-label">Profile Picture</label>
+                            <input type="file" id="image" name="image" class="form-control">
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
                         </div>
-                    </div>
-                    <button class="btn btn-success w-100">Register</button>
-                </form>
+                        <button class="btn btn-success w-100">Register</button>
+                    </form>
+                </div>
             </div>
+            <div> <a class="btn btn-md btn-google btn-block btn-outline " href="/auth/google"><img
+                        src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using
+                    Google</a> </div>
+            <br>
+            <p class="text-center">Already have an account? <a href="/login">Sign in</a></p>
         </div>
-        <div> <a class="btn btn-md btn-google btn-block btn-outline " href="/auth/google"><img
-                    src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using
-                Google</a> </div>
-        <br>
-        <p class="text-center">Already have an account? <a href="/login">Sign in</a></p>
     </div>
-</div>
