--- a/views/museums/show.ejs
+++ b/views/museums/show.ejs
@@ -24,7 +24,7 @@
                     <span class="visually-hidden">Next</span>
                 </a>
             </div>
-            <div class="card order-3">
+            <div class="card order-3 cardM">
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= museum.title %>
@@ -59,7 +59,7 @@
 
         <div class="col-md-12 mt-5 order-4 card d-block">
             <% if(currentUser){ %>
-                <h2 class="mt-3 mb-4">Leave a review</h2>
+                <h2 class="mt-3 mb-4 reviews">Leave a review</h2>
                 <form action="/museums/<%= museum._id %>/reviews" method="POST" class="mb-3 needs-validation"
                     novalidate>
                     <div class="mb-3">
