--- a/views/museums/index.ejs
+++ b/views/museums/index.ejs
@@ -34,7 +34,7 @@
                                         <img class="img-fluid" src="<%=museum.images[0].url%>" alt="">
                                         <% }else{ %>
                                             <img class="img-fluid"
-                                                src="https:s//res.cloudinary.com/dpnapmmwm/image/upload/v1607337366/Museum%20Councel/jfif7zyqy1zf5ceichgd.jpg"
+                                                src="https://res.cloudinary.com/dpnapmmwm/image/upload/v1613670933/Museum%20Councel/p5s5awzrrbrrgyivnhao.jpg"
                                                 alt="">
                                             <% } %>
                                 </div>
